# WendzelNNTPd

./: .gitignore  Makefile  Makefile.in  config.h  configure  configure.ac  create_certificate  wendzelnntpd.conf
.github/workflows/: build-tests.yml  gh-pages.yml
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2
database/: mysql_db_struct.sql
docs/: docs.html  docs.md
scripts/: configure.scan
src/: Makefile  Makefile.am  Makefile.in  db_abstraction.c  db_mysql.c  db_postgres.c  db_sqlite3.c  hash.c  main.c  main.h  server.c
src/.deps/: acl.Po  cdpnntpadm.Po  cdpstrings.Po  charstack.Po  database.Po  main.Po
src/include/: main.h
tmp/project/: mkdocs.yml
tmp/project/docs/: about.md  development.md  docs.md  index.md  output.aux  output.tex  output.toc  template.tex  upgrade.md
tmp/project/site/: 404.html  index.html
tmp/project/site/about/: index.html
tmp/project/site/search/: search_index.json
unittesting/tls-testing/: create_db_test_data.sql  create_db_test_data_mysql.sql  test_wendzelnntpadm.sh
unittesting/tls-testing/test-files/: openssl.cnf  wendzelnntpd.conf
unittesting/tls-testing/tests/: nntp-mutual-tls-test.exp_  nntp-starttls-test.exp  nntp-xover-test.exp
wendzelnntpd-2.2-alpha1/: config.h.in  configure  configure.ac
